<resources>
    <string name="app_name">Forscher_Mobile</string>
    <string name="casa_terracota">Casa Terracota</string>
    <string name="informacion_general">Informacion General:</string>
    <string name="descripcion">Es considerada la cerámica más grande del mundo. Se encuentra a las afuera de Villa de Leyva y esta hecha completamente de barro por el arquitecto Octavio Mendoza. Es una casa de 500 mtrs cuadrados en la cual se utilizaron 400 toneladas de barro y fue cocinada por zonas con un horno que el mismo arquitecto diseño para sellarla como si fuera un jarrón de barro.</string>
    <string name="imagen">terracota</string>
    <string name="museo_paleontologico">Museo Paleontologico</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notificaciones</string>
    <string name="sound">Activar sonido de notificaciones</string>
    <string name="preferences">Ajustes</string>
    <string name="ubicacion">Ubicación:</string>
</resources>